# Gallery

./: .gitignore  db.sqlite3  pyproject.toml
gallery/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
gallery/migrations/: 0001_initial.py  0002_threedmodel_description.py  0002_threedmodel_user.py
settings/: settings.py  urls.py
